[gd_scene load_steps=5 format=2]

[ext_resource path="res://audience_member.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
params_blend_mode = 3

[sub_resource type="BoxShape" id=3]

[node name="AudienceMember" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]

[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
